--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="bakethecake.logo.jpg" alt="" class="src">
+            <img src="./img/bakethecake.logo.jpg" alt="" class="src">
         </div>
         <ul>
             <li class="item"><a href="">HOME</a></li>
@@ -34,20 +34,20 @@
         <div id="services">
 
             <div class="box">
-                <img src="cakeservice1.jpg" alt="" class="src">
+                <img src="./img/cakeservice1.jpg" alt="" class="src">
                 <h2 class="h-secandary center">Cakes</h2>
                 <p class="center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate nisi sit non
                     recusandae reprehenderit quos molestiae provident, earum modi molestias!</p>
             </div>
             <div class="box">
-                <img src="Cateringservices.jpg" alt="" class="src">
+                <img src="./img/Cateringservices.jpg" alt="" class="src">
                 <h2 class="h-secandary center">Catering
                 </h2>
                 <p class="center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate nisi sit non
                     recusandae reprehenderit quos molestiae provident, earum modi molestias!</p>
             </div>
             <div class="box">
-                <img src="deliveryservice.jpg" alt="" class="src">
+                <img src="./img/deliveryservice.jpg" alt="" class="src">
                 <h2 class="h-secandary center">Home Delivery</h2>
                 <p class="center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate nisi sit non
                     recusandae reprehenderit quos molestiae provident, earum modi molestias!</p>
@@ -61,23 +61,23 @@
 
         <div id="gallery1">
             <div class="gallery-items">
-                <img src="gallery (1).jpg" alt="" class="src">
+                <img src="./img/gallery (1).jpg" alt="" class="src">
 
             </div>
 
             <div class="gallery-items">
-                <img src="gallery (2).jpg" alt="" class="src">
+                <img src="./img/gallery (2).jpg" alt="" class="src">
 
             </div>
         </div>
         <div id="gallery2">
             <div class="gallery-items">
-                <img src="gallery (3).jpg" alt="" class="src">
+                <img src="./img/gallery (3).jpg" alt="" class="src">
 
             </div>
 
             <div class="gallery-items">
-                <img src="gallery (4).jpg" alt="" class="src">
+                <img src="./img/gallery (4).jpg" alt="" class="src">
 
             </div>
         </div>
@@ -88,13 +88,13 @@
     <section class="client-section" id="client-section">
         <h1 class="h-primary center">Our clients</h1>
         <div id="clients">
-            <div class="client-items"><img src="client1 (1).jpg" alt="" class="src">
+            <div class="client-items"><img src="./img/client1 (1).jpg" alt="" class="src">
                 <p class="h-secandary center">Alice Jacobs</p>
             </div>
-            <div class="client-items"><img src="client1 (2).jpg" alt="" class="src">
+            <div class="client-items"><img src="./img/client1 (2).jpg" alt="" class="src">
                 <p class="h-secandary center">Harry Parsley</p>
             </div>
-            <div class="client-items"><img src="client1 (3).jpg" alt="" class="src">
+            <div class="client-items"><img src="./img/client1 (3).jpg" alt="" class="src">
                 <p class="h-secandary center">Najwa Gerian</p>
             </div>
         </div>
